--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Poppins, Arial, sans-serif;
+  font-family: Figtree, Arial, sans-serif;
 }
 
 @layer utilities {
